@@ -1,3 +1,4 @@
+* Use origin Reference on Invoice Line and Stock Move
 * Allow no delivery time on product supplier
 
 Version 2.6.0 - 2012-10-22
